--- a/game/templates/base.html
+++ b/game/templates/base.html
@@ -6,7 +6,10 @@
         <link rel="icon" type="image/x-icon" href={% static 'images/mini-skull.png' %} >
         <link href={% static 'rpgui/rpgui.min.css' %} rel="stylesheet" type="text/css" >
         <script src={% static "rpgui/rpgui.min.js" %}></script>
+        <script src={% static "js/jquery-3.7.0.min.js" %}></script>
         <link href={% static 'roleplay.css' %} rel="stylesheet" type="text/css" >
+        <script src={% static 'django_eventstream/eventsource.min.js' %}></script>
+        <script src={% static 'django_eventstream/reconnecting-eventsource.js' %}></script>
     </head>
 
     <body>
