--- a/game/templates/game/game.html
+++ b/game/templates/game/game.html
@@ -7,7 +7,7 @@
 
         es.addEventListener('message', function (e) {
             const obj = JSON.parse(e.data)
-            if (obj.refresh === "tale") {
+            if (obj.game === {{game.id}} && obj.refresh === "tale") {
                 $("#tale").load(window.location.href + " #tale");
             }
         }, false);
