--- a/game/templates/game/index.html
+++ b/game/templates/game/index.html
@@ -68,7 +68,7 @@
         {% endif %}
 
         <h1>Release notes</h1>
-        <p>This game is under development...</p>
+        <p>This game is under development and expecting to change a lot!</p>
         <p>Don't hesitate to provide your feedback or suggestions, by visiting our GitHub page.</p>
         <div class="rpgui-center">
             <a href="https://github.com/egraba/role-play">
