Games are not displayed anymore in the index page

--- a/game/templates/game/index.html
+++ b/game/templates/game/index.html
@@ -24,46 +24,23 @@
         <hr style="clear:both"/>
 
         {% if user.is_authenticated %}
-            <h1>Ongoing games</h1>
-            <p>Select the game you want to join.</p>
-
-            {% for game in page_obj %}
-                <div class="rpgui-container framed-golden-2">
-                    <h2><a href={{ game.get_absolute_url }}>{{ game }}</a></h2>
-                    <p>
-                        Status: {{ game.get_status_display }},
-                        Number of players: {{ game.character_set.all|length }}
-                    </p>
-                    <p>
-                        Start date: {{ game.start_date }},
-                        End date: {{ game.end_date }}
-                    </p>
-                </div>
-            {% empty %}
-                <div class="rpgui-container framed-grey">
-                    <p>There is no game available...</p>
-                </div>
-            {% endfor %}
             <div class="rpgui-center">
-                {% include 'pagination.html' %}
-                {% if perms.game.add_game %}
-                    <a href="{% url 'game-create' %}">
-                        <button class="rpgui-button"><p>Create a new game</p></button>
+                <a href="">
+                    <button class="rpgui-button"><p>View all games</p></button>
+                </a>
+                <a href="{% url 'game-create' %}">
+                    <button class="rpgui-button"><p>Create a new game</p></button>
+                </a>
+                {% if character %}
+                    <a href={{ character.get_absolute_url }}>
+                        <button class="rpgui-button"><p>View your character</p></button>
+                    </a>
+                {% else %}
+                    <a href="{% url 'character-create' %}">
+                        <button class="rpgui-button"><p>Create a new character</p></button>
                     </a>
                 {% endif %}
-                {% if perms.game.add_character %}
-                    {% if character %}
-                        <a href={{ character.get_absolute_url }}>
-                            <button class="rpgui-button"><p>View your character</p></button>
-                        </a>
-                    {% else %}
-                        <a href="{% url 'character-create' %}">
-                            <button class="rpgui-button"><p>Create a new character</p></button>
-                        </a>
-                    {% endif %}
-                {% endif %}
             </div>
-
             <hr/>
         {% endif %}
 
