--- a/game/templates/game/game.html
+++ b/game/templates/game/game.html
@@ -22,7 +22,7 @@
     <div class="rpgui-container framed">
         <h1 id="title" class="title">{{ game }}</h1>
         <div class="rpgui-center">
-            <a href={% url 'index' %}>- Return to main menu -</a>
+            <a href={% url 'game-list' %}>- Return to games list -</a>
         </div>
 
         <hr class="golden"/>
