--- a/game/static/roleplay.css
+++ b/game/static/roleplay.css
@@ -1,3 +1,4 @@
+
 .rpgui-content {
     background: #222;
     overflow-y: scroll;
@@ -15,6 +16,11 @@
 .rpgui-container.framed-golden-2 {
     margin: 2em;
     position: static;
+}
+
+table.rpgui-container.framed-grey {
+    width: 100%;
+    text-align: center;
 }
 
 .character.rpgui-container.framed-grey {
