Fix link to character

--- a/game/templates/game/index.html
+++ b/game/templates/game/index.html
@@ -32,7 +32,7 @@
                     <button class="rpgui-button"><p>Create a new game</p></button>
                 </a>
                 {% if user_character %}
-                    <a href={{ character.get_absolute_url }}>
+                    <a href={{ user_character.get_absolute_url }}>
                         <button class="rpgui-button"><p>View your character</p></button>
                     </a>
                 {% else %}
