Add link to main menu

--- a/game/templates/game/gamelist.html
+++ b/game/templates/game/gamelist.html
@@ -3,6 +3,9 @@
 {% block content %}
     <div class="rpgui-container framed">
         <h1 id="title" class="title">Role play</h1>
+        <div class="rpgui-center">
+            <a href={% url 'index' %}>- Return to main menu -</a>
+        </div>
 
         <hr class="golden"/>
 
