It is now possible to view all existing characters

--- a/game/templates/game/index.html
+++ b/game/templates/game/index.html
@@ -31,6 +31,9 @@
                 <a href="{% url 'game-create' %}">
                     <button class="rpgui-button"><p>Create a new game</p></button>
                 </a>
+                <a href="{% url 'character-list' %}">
+                    <button class="rpgui-button"><p>View all characters</p></button>
+                </a>
                 {% if user_character %}
                     <a href={{ user_character.get_absolute_url }}>
                         <button class="rpgui-button"><p>View your character</p></button>
