--- a/game/templates/game/game.html
+++ b/game/templates/game/game.html
@@ -27,12 +27,14 @@
 
         <hr class="golden"/>
 
+        <h2>Master's message</h2>
         <img class="rpgui-icon wizard" src={% static 'images/wizard.png' %}>
         <div id="tale"><p >{{ tale }}</p></div>
 
         <hr/>
 
         <div id="characters">
+            <h2>Characters</h2>
             {% for character in character_list %}
                 <div class="character rpgui-container framed-grey">
                     <p>
@@ -118,6 +120,7 @@
         <hr />
 
         <div id="events">
+            <h2>Game events</h2>
             <div class="rpgui-container framed-grey">
                 {% for event in event_list %}
                     <p>{{ event.date }}, {{ event.message }}</p>
