--- a/game/static/roleplay.css
+++ b/game/static/roleplay.css
@@ -18,9 +18,10 @@
     position: static;
 }
 
-table.rpgui-container.framed-grey {
+table {
     width: 100%;
     text-align: center;
+    table-layout: fixed;
 }
 
 .character.rpgui-container.framed-grey {
