Add objective field

--- a/master/templates/master/story.html
+++ b/master/templates/master/story.html
@@ -8,5 +8,7 @@
         <p class="rpgui-container framed-grey">{{ story.synopsis }}</p>
         <h2>Main conflict</h2>
         <p class="rpgui-container framed-grey">{{ story.main_conflict }}</p>
+        <h2>Objective</h2>
+        <p class="rpgui-container framed-grey">{{ story.objective }}</p>
     </div>
 {% endblock content %}
