--- a/game/templates/game/game.html
+++ b/game/templates/game/game.html
@@ -29,7 +29,7 @@
 
         <h2>Master's message</h2>
         <img class="rpgui-icon wizard" src={% static 'images/wizard.png' %}>
-        <div id="tale"><p >{{ tale }}</p></div>
+        <div id="tale"><p >{{ tale|linebreaks }}</p></div>
 
         <hr/>
 
