--- a/game/templates/game/index.html
+++ b/game/templates/game/index.html
@@ -28,7 +28,7 @@
                 <a href="{% url 'game-list' %}">
                     <button class="rpgui-button"><p>View all games</p></button>
                 </a>
-                <a href="{% url 'game-create' %}">
+                <a href="{% url 'story-list' %}">
                     <button class="rpgui-button"><p>Create a new game</p></button>
                 </a>
                 <a href="{% url 'character-list' %}">
