Fix game display in character list

--- a/character/templates/character/character_list.html
+++ b/character/templates/character/character_list.html
@@ -27,9 +27,13 @@
                     <td><p>{{ character.get_race_display }}</p></td>
                     <td><p>{{ character.xp }}</p></td>
                     <td>
-                        {% if character.game %}
-                            <a href={{ character.game.get_absolute_url }}>{{ character.game }}</a>
-                        {% endif %}
+                        {% with game=character.player.game %}
+                            {% if game %}
+                                <a href={{ game.get_absolute_url }}>{{ game }}</a>
+                            {% else %}
+                                <p>-</p>
+                            {% endif %}
+                        {% endwith %}
                     </td>
                 </tr>
             {% empty %}
