Fix user display

--- a/character/templates/character/character_list.html
+++ b/character/templates/character/character_list.html
@@ -23,7 +23,9 @@
             {% for character in page_obj %}
                 <tr>
                     <td><a href={{ character.get_absolute_url }}>{{ character }}</a></td>
-                    <td><p>{{ character.user }}</p></td>
+                    {% with user=character.player.user %}
+                        <td><p>{{ user }}</p></td>
+                    {% endwith %}
                     <td><p>{{ character.get_race_display }}</p></td>
                     <td><p>{{ character.xp }}</p></td>
                     <td>
