--- a/game/static/roleplay.css
+++ b/game/static/roleplay.css
@@ -34,7 +34,7 @@ table {
     padding-bottom: 0;
 }
 
-.form.rpgui-container.framed-golden, .info {
+.form.rpgui-container.framed-golden, .info.rpgui-container.framed-golden {
     width: 50%;
     margin-top: 10%;
     margin-left: 25%;
