Move eventstream js only in game.html

--- a/game/templates/game/game.html
+++ b/game/templates/game/game.html
@@ -2,6 +2,9 @@
 {% load static %}
 
 {% block content %}
+    <script src={% static 'django_eventstream/eventsource.min.js' %}></script>
+    <script src={% static 'django_eventstream/reconnecting-eventsource.js' %}></script>
+
     <script>
         var es = new ReconnectingEventSource('/events/');
 
