Replace button by a simple link

--- a/game/templates/game/index.html
+++ b/game/templates/game/index.html
@@ -49,12 +49,8 @@
 
         <h1>Release notes</h1>
         <p>This game is under development and expecting to change a lot!</p>
-        <p>Don't hesitate to provide your feedback or suggestions, by visiting our GitHub page.</p>
-        <div class="rpgui-center">
-            <a href="https://github.com/egraba/role-play">
-                <button class="rpgui-button" ><p>View on GitHub</p></button>
-            </a>
-        </div>
+        <p>Don't hesitate to provide your feedback or suggestions, by visiting our
+            project on <a href="https://github.com/egraba/role-play">GitHub</a>.</p>
         <div class="rpgui-center inline">
             <img class="rpgui-icon" style="transform: scaleX(-1)" src={% static 'images/mini-skull.png' %}>
             <a href="#title">- Back to top -</a>
