--- a/game/templates/game/game.html
+++ b/game/templates/game/game.html
@@ -154,7 +154,7 @@
             <h2>Game events</h2>
             <div class="rpgui-container framed-grey">
                 {% for event in event_list %}
-                    <p>{{ event.date }}, {{ event.message }}</p>
+                    <p>{{ event.date|timesince }} ago, {{ event.message }}</p>
                 {% empty %}
                     <p>The story did not start yet...</p>
                 {% endfor %}
