--- a/game/templates/game/game.html
+++ b/game/templates/game/game.html
@@ -13,6 +13,8 @@
             if (obj.game === {{game.id}}) {
                 if (obj.refresh === "tale") {
                     $("#tale").load(window.location.href + " #tale");
+                } else if (obj.refresh === "instruction") {
+                    $("#instruction").load(window.location.href + " #instruction");
                 } else if (obj.refresh === "event") {
                     $("#events").load(window.location.href + " #events");
                     $("#actions").load(window.location.href + " #actions");
