--- a/game/templates/base.html
+++ b/game/templates/base.html
@@ -10,7 +10,7 @@
         <link href={% static 'roleplay.css' %} rel="stylesheet" type="text/css" >
     </head>
 
-    <body>
-        <div class="rpgui-content">{% block content %}{% endblock%}</div>
+    <body class="rpgui-content">
+        {% block content %}{% endblock%}
     </body>
 </html>
