Quest is now displayed on a paper

--- a/game/templates/game/game.html
+++ b/game/templates/game/game.html
@@ -31,9 +31,10 @@
         </div>
 
         <hr class="golden"/>
+        <br />
 
-        <h2>Tale</h2>
-        <div id="tale"><p >{{ tale|linebreaks }}</p></div>
+        <h2>Quest</h2>
+        <div id="tale" class="rpgui-container framed-golden-2"><p >{{ tale|linebreaks }}</p></div>
 
         <hr />
 
