Center text when no character has been invited

--- a/game/templates/game/game.html
+++ b/game/templates/game/game.html
@@ -96,7 +96,9 @@
                     {% endif %}
                 </table>
             {% empty %}
-                <p>There is no character for this game...</p>
+                <div class="rpgui-center">
+                    <p>There is no character for this game...</p>
+                </div>
             {% endfor %}
         </div>
 
