--- a/game/static/roleplay.css
+++ b/game/static/roleplay.css
@@ -7,12 +7,8 @@
     width: 142.857143%;
 }
 
-.rpgui-content .title {
-    font-size: x-large;
-}
-
 .rpgui-container.framed {
-    margin: 2em;
+    margin: 1em;
     position: static;
 }
 
@@ -77,6 +73,19 @@ ul.errorlist {
     list-style: none;
 }
 
+#events {
+    width: 102em;
+    position: relative;
+    left: 35em;
+    height: 40em;
+}
+
 #characters {
     width: 33em;
+    top: -40em;
+}
+
+#master {
+    width: 33em;
+    top: -38em;
 }
