--- a/game/templates/game/game.html
+++ b/game/templates/game/game.html
@@ -36,6 +36,15 @@
         <h2>Quest</h2>
         <div id="tale" class="rpgui-container framed-golden-2"><p >{{ tale|linebreaks }}</p></div>
 
+        <div id="events" class="rpgui-container framed-grey">
+            <h3>Game events</h3>
+            {% for event in event_list %}
+                <p>{{ event.date|timesince }} ago, {{ event.message }}</p>
+            {% empty %}
+                <p>The story did not start yet...</p>
+            {% endfor %}
+        </div>
+
         <div id="characters" class="rpgui-container framed-grey">
             <h3>Characters</h3>
             {% for character in character_list %}
@@ -62,58 +71,30 @@
         </div>
 
         {% if game.master.user == user %}
-            <div class="rpgui-center">
-
-                {% if game.is_under_preparation %}
-                    <a href={% url 'game-start' game.id %}>
-                        <button class="rpgui-button"><p>Start the game</p></button>
-                    </a>
-                {% endif%}
+            <div id="master" class="rpgui-container framed-grey">
+                <h3>Master's panel</h3>
+                <div class="rpgui-center">
+                    {% if game.is_under_preparation %}
+                        <p>
+                            <a href={% url 'game-start' game.id %}>
+                                <button class="rpgui-button"><p>Start the game</p></button>
+                            </a>
+                        </p>
+                    {% elif game.is_ongoing %}
+                        <p>
+                            <a href={% url 'tale-create' game.id %}>
+                                <button class="rpgui-button"><p>Continue the story</p></button>
+                            </a>
+                        </p>
+                        <p>
+                            <a href={% url 'instruction-create' game.id %}>
+                                <button class="rpgui-button"><p>Give an instruction</p></button>
+                            </a>
+                        </p>
+                    {% endif %}
+                </div>
             </div>
         {% endif %}
-
-        {% if game.is_ongoing %}
-            <div id="actions" class="rpgui-center">
-                {% if game.master.user == user %}
-                    <a href={% url 'tale-create' game.id %}>
-                        <button class="rpgui-button"><p>Continue the story</p></button>
-                    </a>
-                    <a href={% url 'instruction-create' game.id %}>
-                        <button class="rpgui-button"><p>Give an instruction</p></button>
-                    </a>
-                {% endif %}
-                {% if player.character.pendingaction %}
-                    {% if player.character.pendingaction.get_action_type_display == "Launch dice" %}
-                        <a class="character-action" href={% url 'dicelaunch-create' game.id player.character.id %}>
-                            <button class="rpgui-button">
-                                <p>{{ player.character.pendingaction.get_action_type_display }}</p>
-                            </button>
-                        </a>
-                    {% endif %}
-                    {% if player.character.pendingaction.get_action_type_display == "Make choice" %}
-                        <a class="character-action" href={% url 'choice-create' game.id player.character.id %}>
-                            <button class="rpgui-button">
-                                <p>{{ player.character.pendingaction.get_action_type_display }}</p>
-                            </button>
-                        </a>
-                    {% endif %}
-                {% endif %}
-            </div>
-        {% endif %}
-
-        <hr />
-
-        <div id="events">
-            <h2>Game events</h2>
-            <div class="rpgui-container framed-grey">
-                {% for event in event_list %}
-                    <p>{{ event.date|timesince }} ago, {{ event.message }}</p>
-                {% empty %}
-                    <p>The story did not start yet...</p>
-                {% endfor %}
-            </div>
-        </div>
-        {% include 'pagination.html' %}
 
 
         <div class="rpgui-center inline">
