Remove not used divs

--- a/game/static/roleplay.css
+++ b/game/static/roleplay.css
@@ -59,13 +59,7 @@ table {
     margin-bottom: 1em;
 }
 
-.wizard {
-    height: auto;
-    float: left;
-    margin-right: 1em;
-}
-
-#tale, #instruction {
+#tale {
     min-height: 120px;
 }
 
