--- a/game/static/roleplay.css
+++ b/game/static/roleplay.css
@@ -67,19 +67,26 @@ ul.errorlist {
     list-style: none;
 }
 
-#events {
-    width: 102em;
+#game {
     position: relative;
+    height: 42em;
+}
+
+#events {
+    position: absolute;
     left: 35em;
+    width: 102em;
     height: 40em;
 }
 
 #characters {
+    position: relative;
+    top: 0;
     width: 33em;
-    top: -40em;
 }
 
 #master {
+    position: relative;
+    top: 2em;
     width: 33em;
-    top: -38em;
 }
