--- a/game/templates/game/game.html
+++ b/game/templates/game/game.html
@@ -36,65 +36,67 @@
         <h2>Quest</h2>
         <div id="quest" class="rpgui-container framed-golden-2"><p >{{ tale|linebreaks }}</p></div>
 
-        <div id="events" class="rpgui-container framed-grey">
-            <h3>Game events</h3>
-            {% for event in event_list %}
-                <p>{{ event.date|timesince }} ago, {{ event.message }}</p>
-            {% empty %}
-                <p>The story did not start yet...</p>
-            {% endfor %}
-        </div>
+        <div id="game">
+            <div id="events" class="rpgui-container framed-grey">
+                <h3>Game events</h3>
+                {% for event in event_list %}
+                    <p>{{ event.date|timesince }} ago, {{ event.message }}</p>
+                {% empty %}
+                    <p>The story did not start yet...</p>
+                {% endfor %}
+            </div>
 
-        <div id="characters" class="rpgui-container framed-grey">
-            <h3>Characters</h3>
-            {% for character in character_list %}
-                {% with character_user=character.user %}
-                    <p>
-                        <a href={{ character.get_absolute_url }}>{{ character }}</a>
-                        {% if character_user == user %}
-                            (played by you)
-                        {% else %}
-                            (played by {{ character_user }})
+            <div id="characters" class="rpgui-container framed-grey">
+                <h3>Characters</h3>
+                {% for character in character_list %}
+                    {% with character_user=character.user %}
+                        <p>
+                            <a href={{ character.get_absolute_url }}>{{ character }}</a>
+                            {% if character_user == user %}
+                                (played by you)
+                            {% else %}
+                                (played by {{ character_user }})
+                            {% endif %}
+                        </p>
+                    {% endwith %}
+                {% empty %}
+                    <div class="rpgui-center">
+                        <p>There is no character for this game...</p>
+                    </div>
+                {% endfor %}
+                <div class="rpgui-center">
+                    <a href={% url 'game-invite-character' game.id %}>
+                        <button class="rpgui-button"><p>Invite a character</p></button>
+                    </a>
+                </div>
+            </div>
+
+            {% if game.master.user == user %}
+                <div id="master" class="rpgui-container framed-grey">
+                    <h3>Master's panel</h3>
+                    <div class="rpgui-center">
+                        {% if game.is_under_preparation %}
+                            <p>
+                                <a href={% url 'game-start' game.id %}>
+                                    <button class="rpgui-button"><p>Start the game</p></button>
+                                </a>
+                            </p>
+                        {% elif game.is_ongoing %}
+                            <p>
+                                <a href={% url 'tale-create' game.id %}>
+                                    <button class="rpgui-button"><p>Continue the story</p></button>
+                                </a>
+                            </p>
+                            <p>
+                                <a href={% url 'instruction-create' game.id %}>
+                                    <button class="rpgui-button"><p>Give an instruction</p></button>
+                                </a>
+                            </p>
                         {% endif %}
-                    </p>
-                {% endwith %}
-            {% empty %}
-                <div class="rpgui-center">
-                    <p>There is no character for this game...</p>
+                    </div>
                 </div>
-            {% endfor %}
-            <div class="rpgui-center">
-                <a href={% url 'game-invite-character' game.id %}>
-                    <button class="rpgui-button"><p>Invite a character</p></button>
-                </a>
-            </div>
+            {% endif %}
         </div>
-
-        {% if game.master.user == user %}
-            <div id="master" class="rpgui-container framed-grey">
-                <h3>Master's panel</h3>
-                <div class="rpgui-center">
-                    {% if game.is_under_preparation %}
-                        <p>
-                            <a href={% url 'game-start' game.id %}>
-                                <button class="rpgui-button"><p>Start the game</p></button>
-                            </a>
-                        </p>
-                    {% elif game.is_ongoing %}
-                        <p>
-                            <a href={% url 'tale-create' game.id %}>
-                                <button class="rpgui-button"><p>Continue the story</p></button>
-                            </a>
-                        </p>
-                        <p>
-                            <a href={% url 'instruction-create' game.id %}>
-                                <button class="rpgui-button"><p>Give an instruction</p></button>
-                            </a>
-                        </p>
-                    {% endif %}
-                </div>
-            </div>
-        {% endif %}
 
         <div class="rpgui-center inline">
             <img class="rpgui-icon" style="transform: scaleX(-1)" src={% static 'images/mini-skull.png' %}>
