--- a/game/templates/game/game.html
+++ b/game/templates/game/game.html
@@ -84,7 +84,7 @@
                         {% elif game.is_ongoing %}
                             <p>
                                 <a href={% url 'tale-create' game.id %}>
-                                    <button class="rpgui-button"><p>Continue the story</p></button>
+                                    <button class="rpgui-button"><p>Update the quest</p></button>
                                 </a>
                             </p>
                             <p>
